# roguestar

./: .gitignore  .gitmodules  COPYING  INSTALL  LICENSE  Main.hs  Makefile  ModelView.hs  README  Tests.hs  roguestar-engine.cabal  roguestar-gl.cabal  roguestar-local  rsagl-demos.cabal  rsagl-rgb.html  rsagl-rgb.txt  rsagl.cabal
Data/: DeepSeq.hs
Models/: PlanetRingMoon.hs  SineWave.hs
RSAGL/: AbstractVector.lhs  Affine.hs  Affine.lhs  Angle.hs  Angle.lhs  Animation.hs  Animation.lhs  AnimationExtras.lhs  ApplicativeWrapper.hs  ApplicativeWrapper.lhs  ArrowTransformerOptimizer.lhs  ArrowTransformerShield.lhs  Auxiliary.hs  BakedModel.hs  Bottleneck.hs  Bottleneck.lhs  BoundingBox.lhs  CSN.lhs  Color.lhs  CoordinateSystems.lhs  Curve.hs  Curve.lhs  CurveExtras.lhs  Deformation.lhs  Edge.lhs  Extrusion.lhs  FRP.hs  FRP.lhs  FRPBase.hs  FRPBase.lhs  Homogenous.hs  Homogenous.lhs  Interpolation.lhs  InverseKinematics.lhs  Joint.lhs  KinematicSensors.lhs  LODCache.hs  LightSource.hs  LightSource.lhs  ListUtils.lhs  (+41 more)
RSAGL/Animation/: Animation.lhs  AnimationExtras.lhs  InverseKinematics.lhs  Joint.lhs  KinematicSensors.lhs
RSAGL/Auxiliary/: Auxiliary.hs  RecombinantState.hs
RSAGL/Extras/: ColorPhysics.hs  Sky.hs  Sky.lhs
RSAGL/FRP/: Accumulation.hs  ArrowTransformerOptimizer.lhs  Edge.lhs  FRP.hs  FRP.lhs  FRPBase.hs  FRPModel.hs  FactoryArrow.hs  HasMonad.hs  Message.hs  MonadReference.hs  StatefulArrow.lhs  SwitchedArrow.lhs  ThreadedArrow.lhs  Time.lhs
RSAGL/FRP2/: FRP.hs  FactoryArrow.hs
RSAGL/Math/: AbstractVector.hs  AbstractVector.lhs  Affine.hs  Angle.hs  Curve.hs  CurveExtras.lhs  FMod.hs  Homogenous.hs  Interpolation.lhs  Matrix.lhs  RK4.lhs  Ray.lhs  Vector.lhs  WrappedAffine.hs
RSAGL/Modeling/: BakedModel.hs  BoundingBox.lhs  Color.lhs  Extrusion.lhs  Material.hs  Model.lhs  ModelingExtras.lhs  Noise.lhs  OpenGLPrimitives.hs  Optimization.lhs  RSAGLColors.hs  Tesselation.hs  Tesselation.lhs
RSAGL/RayTrace/: RayTrace.lhs  Scattering.lhs
RSAGL/Scene/: CoordinateSystems.lhs  LODCache.hs  LightSource.hs  Scene.lhs
haddock/: Makefile
header/: license-header  license-header.conf
html/: howto-view-models.html  index.html
maintainer-scripts/: vim.makehere.sh
roguestar/: roguestar.cabal
roguestar-engine/: roguestar-engine.cabal
roguestar-engine/src/: Activate.hs  Alignment.hs  AttributeGeneration.hs  BeginGame.hs  Behavior.hs  Building.hs  BuildingData.hs  Character.hs  CharacterAdvancement.hs  CharacterData.hs  Construction.hs  Contact.hs  Creature.hs  CreatureAttribute.hs  CreatureData.hs  DB.hs  DBData.hs  DBErrorFlag.hs  DBPrivate.hs  DeviceActivation.hs  Facing.hs  FactionData.hs  GridRayCaster.hs  Grids.hs  Logging.hs  Main.hs  NodeData.hs  Perception.hs  Plane.hs  PlaneVisibility.hs  Planet.hs  PlanetData.hs  PlayerState.hs  Protocol.hs  Random.hs  Species.hs  SpeciesData.hs  Stats.hs  Substances.hs  TerrainData.hs  (+8 more)
roguestar-gl/: .boring  Main.hs  roguestar-gl.cabal
roguestar-gl/src/: Actions.hs  Animation.hs  AnimationBuildings.hs  AnimationCreatures.hs  AnimationEvents.hs  AnimationExtras.hs  AnimationMenus.hs  AnimationTerrain.hs  AnimationTools.hs  AnimationVortex.hs  CommandLine.hs  Config.hs  CreatureData.hs  DrawString.hs  Driver.hs  EventUtils.hs  Globals.hs  Initialization.hs  KeyStroke.hs  Limbs.hs  Main.hs  MainGLUT.hs  MainGTK.hs  PrintText.hs  PrintTextData.hs  Processes.hs  ProtocolTypes.hs  Quality.hs  RenderingControl.hs  Sky.hs  Statistics.hs  Strings.hs  Tables.hs  VisibleObject.hs  WordGenerator.hs
roguestar-gl/src/Keymaps/: CommonKeymap.hs  Keymaps.hs  NumpadKeymap.hs  VIKeymap.hs
roguestar-gl/src/Models/: Androsynth.hs  Ascendant.hs  Caduceator.hs  Encephalon.hs  EnergySwords.hs  EnergyThings.hs  Glows.hs  Hellion.hs  Library.hs  LibraryData.hs  Materials.hs  Monolith.hs  Node.hs  PhaseWeapons.hs  QuestionMark.hs  Reptilian.hs  Sky.hs  Spheres.hs  Terrain.hs  Tree.hs
roguestar-glut/: roguestar-glut.cabal
roguestar-glut/src/: Main.hs
roguestar-gtk/: roguestar-gtk.cabal
roguestar-gtk/src/: Main.hs
roguestar/src/: Main.hs
rsagl/: ProcessColors.hs  rsagl-rgb.html  rsagl-rgb.txt  rsagl.cabal
rsagl-demos/: ModelView.hs  Tests.hs  rsagl-demos.cabal
rsagl-frp/: rsagl-frp.cabal
rsagl-math/: rsagl-math.cabal
rsagl/RSAGL/: Color.hs  FRP.hs  Math.hs  Modeling.hs  Types.hs
rsagl/RSAGL/Animation/: Animation.hs  Animation.lhs  AnimationExtras.hs  AnimationExtras.lhs  InverseKinematics.hs  InverseKinematics.lhs  Joint.hs  Joint.lhs  KinematicSensors.hs  KinematicSensors.lhs
rsagl/RSAGL/Auxiliary/: ApplicativeWrapper.hs  Auxiliary.hs
rsagl/RSAGL/Color/: Alpha.hs  Auxiliary.hs  Channels.hs  ColorSpace.hs  HCL.hs  LinearAdjust.hs  OpenGL.hs  RGB.hs  RSAGLColors.hs  Spaces.hs
rsagl/RSAGL/Extras/: ColorPhysics.hs  Sky.hs
rsagl/RSAGL/FRP/: Accumulation.hs  FRP.hs  RK4.hs  Time.lhs
rsagl/RSAGL/Math/: AbstractVector.hs  Affine.hs  Angle.hs  Curve.hs  CurveExtras.lhs  FMod.hs  Interpolation.lhs  Orthagonal.lhs  Orthogonal.hs  RK4.hs  Ray.hs  Ray.lhs  Vector.lhs
rsagl/RSAGL/Modeling/: BakedModel.hs  BoundingBox.hs  Color.hs  Color.lhs  Deformation.hs  Deformation.lhs  Extrusion.hs  Extrusion.lhs  Material.hs  Model.lhs  ModelingExtras.lhs  Noise.hs  Optimization.lhs  RSAGLColors.hs  Tesselation.hs
rsagl/RSAGL/RayTrace/: RayTrace.lhs  Scattering.lhs
rsagl/RSAGL/Scene/: CoordinateSystems.lhs  LightSource.hs  Scene.lhs  WrappedAffine.hs
src/: Actions.hs  Actions.lhs  Activate.hs  Alignment.hs  Animation.hs  Animation.lhs  AnimationAux.hs  AnimationBuildings.hs  AnimationCore.hs  AnimationCreatures.hs  AnimationEvents.hs  AnimationExtras.hs  AnimationMenus.hs  AnimationTerrain.hs  AnimationTools.hs  AscensionClassStarship.hs  Attribute.hs  AttributeData.hs  BeginGame.hs  Behavior.hs  Building.hs  BuildingData.hs  Camera.hs  CameraData.hs  CameraTracking.hs  Character.hs  CharacterData.hs  Combat.hs  CommandLine.lhs  ConcordanceStarshipParts.hs  Construction.hs  Contact.hs  Creature.hs  CreatureAttribute.hs  CreatureData.hs  DB.hs  DBData.hs  DBErrorFlag.hs  DBPrivate.hs  DefaultKeymap.hs  (+94 more)
(+56 files in other folders)
