name:                roguestar-engine
version:             0.3
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description:         Roguestar is a science fiction themed roguelike (turn-based,
                     chessboard-tiled, role playing) game written in Haskell. This package
                     provides the core game engine; you'll probably want to also install the
                     OpenGL client.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/roguestar-engine.git>.
homepage:            http://roguestar.downstairspeople.org/

build-depends:       base>3, containers, array, old-time, random, mtl, MaybeT, MonadRandom, data-memocombinators, stm
build-type:          Simple
tested-with:         GHC==6.8.2

executable:          roguestar-engine
main-is:             Main.hs
hs-source-dirs:      src
other-modules:       VisibilityData, Stats, FactionData, Behavior, Alignment,
                     PlaneData, Grids, Perception, PlaneVisibility,
                     Turns, Plane, CreatureData,
                     StatsData, Protocol, Character, Tool,
                     Substances, HierarchicalDatabase, Travel, ToolData,
                     CharacterData, Creature, Facing, DBPrivate,
                     RNG, Species, Position, TerrainData, Combat,
                     Tests, DBData, GridRayCaster, BeginGame,
                     SpeciesData, TimeCoordinate, DB, AttributeGeneration,
                     CreatureAttribute, Building, BuildingData, Town

ghc-options:         -Wall -threaded -fno-warn-type-defaults
ghc-prof-options:    -prof -auto-all
