name:                roguestar-gl
version:             0.3
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson <lane@downstairspeople.org>
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description:         Roguestar is a science fiction themed roguelike (turn-based,
                     chessboard-tiled, role playing) game written in Haskell.  Roguestar uses
                     OpenGL for graphics.  This is still a very early release and several
                     important things don't work.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/roguestar-gl.git>.
homepage:            http://roguestar.downstairspeople.org/

build-depends:       base>3, containers, arrows, mtl, MonadRandom, GLUT,
                     rsagl ==0.3, filepath >1.1, random >=1.0.0.0, bytestring,
                     statistics, vector, stm

build-type:          Simple
tested-with:         GHC==6.8.2

executable:          roguestar-gl
main-is:             Main.hs
hs-source-dirs:      src
other-modules:       Quality, ProtocolTypes, VisibleObject,
                     Strings, WordGenerator, Driver,
                     PrintTextData, Animation,
                     Actions, Limbs, Tables, PrintText, CommandLine,
                     Models.Androsynth, Models.QuestionMark, Models.Terrain, Models.RecreantFactory,
                     Models.Recreant, Models.Ascendant, Models.Materials, Models.Reptilian,
                     Models.Library, Models.MachineParts, Models.LibraryData, Models.Caduceator,
                     Models.Tree, Models.Encephalon, Models.PhaseWeapons, RenderingControl,
                     Keymaps.BuiltinKeymaps, Keymaps.CommonKeymap, Keymaps.NumpadKeymap,
                     Keymaps.Keymaps, Keymaps.VIKeymap, AnimationBuildings, Models.Monolith,
                     Models.Stargate, Statistics
ghc-options:         -Wall -threaded -fno-warn-type-defaults -fexcess-precision
ghc-prof-options:    -prof -auto-all

executable:          roguestar
main-is:             Main.hs
build-depends:       process, old-time, bytestring
ghc-options:         -Wall -threaded
