name:                rsagl
version:             0.3
license:             BSD3
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game, Graphics
synopsis:            The RogueStar Animation and Graphics Library
description:         RSAGL, the RogueStar Animation and Graphics Library, includes a
                     domain-specific monad for 3D modelling of arbitrary parametric surfaces,
                     as well as an animation monad and arrow, which is more or less like YAMPA
                     as a stack of arrow transformers.  RSAGL was specifically designed for
                     roguestar, but every effort has been made (including the license) to make
                     it accessable to other projects that might benefit from it.
                     .
                     The Darcs repository is available at <http://www.downstairspeople.org/darcs/rsagl>.
cabal-version:       >= 1.2
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.8.2

Library
    exposed-modules:     RSAGL.Animation, RSAGL.Modeling, RSAGL.FRP, RSAGL.Scene, RSAGL.Math, RSAGL.Math.FMod,
                         RSAGL.FRP.FRPBase, RSAGL.RayTrace.RayTrace, RSAGL.Math.Ray, RSAGL.FRP.StatefulArrow,
                         RSAGL.Modeling.Material, RSAGL.Modeling.BoundingBox,
                         RSAGL.Math.Vector, RSAGL.Animation.KinematicSensors, RSAGL.Modeling.RSAGLColors,
                         RSAGL.Modeling.Extrusion, RSAGL.Modeling.Color,
                         RSAGL.FRP.SwitchedArrow, RSAGL.FRP.Time, RSAGL.Math.Matrix,
                         RSAGL.Animation.Joint, RSAGL.FRP.ArrowTransformerOptimizer,
                         RSAGL.Math.Affine, RSAGL.Math.WrappedAffine, RSAGL.Math.CurveExtras,
                         RSAGL.Scene.Scene, RSAGL.Animation.InverseKinematics, RSAGL.FRP.FRP,
                         RSAGL.Math.RK4, RSAGL.Animation.AnimationExtras, RSAGL.Math.Interpolation,
                         RSAGL.Modeling.Model, RSAGL.Modeling.Deformation, RSAGL.Scene.LODCache,
                         RSAGL.Modeling.Noise, RSAGL.Modeling.Tesselation,
                         RSAGL.Bottleneck, RSAGL.Modeling.ModelingExtras, RSAGL.Animation.Animation,
                         RSAGL.Math.Curve, RSAGL.Math.Angle, RSAGL.Modeling.Optimization,
                         RSAGL.Scene.CoordinateSystems, RSAGL.Math.Orthagonal,
                         RSAGL.Math.AbstractVector, RSAGL.FRP.ThreadedArrow,
                         RSAGL.Scene.LightSource, RSAGL.RayTrace.Scattering,
                         RSAGL.Extras.Sky, RSAGL.Extras.ColorPhysics,
                         RSAGL.Modeling.BakedModel, RSAGL.FRP2.FactoryArrow, RSAGL.Auxiliary.RecombinantState

    other-modules:       RSAGL.Modeling.OpenGLPrimitives, RSAGL.Auxiliary.Auxiliary, RSAGL.Auxiliary.ApplicativeWrapper

    ghc-options:         -Wall -threaded -fno-warn-type-defaults -fexcess-precision
    ghc-prof-options:    -prof -auto-all

    build-depends:       base>=4, old-time, random, array, arrows, containers, parallel, mtl, OpenGL, GLUT, QuickCheck<2, parsec>=3, Vec >= 0.9.6, stm

Executable _rsagl_process_colors
    main-is:             ProcessColors.hs
    ghc-options:         -Wall -threaded -fno-warn-type-defaults -fexcess-precision

