name:                rsagl
version:             0.3
license:             BSD3
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game, Graphics
synopsis:            The RogueStar Animation and Graphics Library
description:         RSAGL, the RogueStar Animation and Graphics Library,
                     was specifically designed for a computer game called roguestar, 
                     but effort has been made to make it accessable to other projects that 
                     might benefit from it.  It includes mathematical utilities,
                     a 3D modeling language based on parametric surfaces, and a 
                     YAMPA-inspired arrow-based FRP framework.
                     .
                     The Darcs repository is available at <http://www.downstairspeople.org/darcs/rsagl>.
cabal-version:       >= 1.2
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.10.1

Library
    exposed-modules:     RSAGL.Animation, RSAGL.Modeling, RSAGL.FRP, RSAGL.Scene, RSAGL.Math, RSAGL.Math.FMod,
                         RSAGL.RayTrace.RayTrace, RSAGL.Math.Ray,
                         RSAGL.Modeling.Material, RSAGL.Modeling.BoundingBox,
                         RSAGL.Math.Vector, RSAGL.Animation.KinematicSensors, RSAGL.Modeling.RSAGLColors,
                         RSAGL.Modeling.Extrusion, RSAGL.Modeling.Color,
                         RSAGL.FRP.Time, RSAGL.Math.Matrix,
                         RSAGL.Animation.Joint,
                         RSAGL.Math.Affine, RSAGL.Math.WrappedAffine, RSAGL.Math.CurveExtras,
                         RSAGL.Scene.Scene, RSAGL.Animation.InverseKinematics, RSAGL.FRP.FRP,
                         RSAGL.Math.RK4, RSAGL.Animation.AnimationExtras, RSAGL.Math.Interpolation,
                         RSAGL.Modeling.Model, RSAGL.Modeling.Deformation, RSAGL.Scene.LODCache,
                         RSAGL.Modeling.Noise, RSAGL.Modeling.Tesselation,
                         RSAGL.Bottleneck, RSAGL.Modeling.ModelingExtras, RSAGL.Animation.Animation,
                         RSAGL.Math.Curve, RSAGL.Math.Angle, RSAGL.Modeling.Optimization,
                         RSAGL.Scene.CoordinateSystems, RSAGL.Math.Orthagonal,
                         RSAGL.Math.AbstractVector,
                         RSAGL.Scene.LightSource, RSAGL.RayTrace.Scattering,
                         RSAGL.Extras.Sky, RSAGL.Extras.ColorPhysics,
                         RSAGL.Modeling.BakedModel, RSAGL.FRP.FactoryArrow, RSAGL.Auxiliary.RecombinantState,
                         RSAGL.Types

    other-modules:       RSAGL.Modeling.OpenGLPrimitives, RSAGL.Auxiliary.Auxiliary, RSAGL.Auxiliary.ApplicativeWrapper

    ghc-options:         -Wall -threaded -fno-warn-type-defaults -fexcess-precision
    ghc-prof-options:    -prof -auto-all

    build-depends:       base>=4, old-time, random, array, arrows, containers, parallel, mtl, OpenGL, GLUT, parsec>=3, Vec >= 0.9.6, stm, data-memocombinators

Executable _rsagl_process_colors
    main-is:             ProcessColors.hs
    ghc-options:         -Wall -threaded -fno-warn-type-defaults -fexcess-precision

