name: roguestar-engine
version: 0.5
cabal-version: -any
build-type: Simple
license: OtherLicense
license-file: LICENSE
copyright:
maintainer: Christopher Lane Hinson <lane@downstairspeople.org>
build-depends: hslogger >=1.1.0 && <1.2,
               priority-sync >=0.2.1.0 && <0.3, PSQueue >=1.1 && <1.2,
               bytestring >=0.9.1.5 && <0.10, parallel >=2.2.0.1 && <2.3,
               stm >=2.1.1.2 && <2.2, data-memocombinators >=0.4.0 && <0.5,
               MonadRandom >=0.1.4 && <0.2, MaybeT >=0.1.2 && <0.2,
               mtl >=1.1.0.2 && <1.2, random >=1.0.0.2 && <1.1,
               old-time >=1.0.0.3 && <1.1, array >=0.3.0.0 && <0.3.1,
               containers >=0.3.0.0 && <0.3.1, base >=4 && <5
stability:
homepage: http://roguestar.downstairspeople.org/
package-url:
bug-reports:
synopsis: Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description: Roguestar is a science fiction themed roguelike (turn-based,
             chessboard-tiled, role playing) game written in Haskell. This package
             provides the core game engine; you'll probably want to also install the
             OpenGL client.
             .
             The git repository is available at <http://www.downstairspeople.org/git/roguestar-engine.git>.
category: Game
author: Christopher Lane Hinson
tested-with: GHC ==6.12.1
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: roguestar-engine
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: TravelData VisibilityData Stats FactionData Behavior
               Alignment PlaneData Grids Perception PlaneVisibility Turns Plane
               CreatureData StatsData Protocol Character Tool Substances
               HierarchicalDatabase Travel ToolData CharacterData Creature Facing
               DBPrivate RNG Species Position TerrainData Combat Tests DBData
               GridRayCaster BeginGame SpeciesData TimeCoordinate DB
               AttributeGeneration CreatureAttribute Building BuildingData Town
               Random PlayerState MakeData DBErrorFlag Construction Make Activate
               Contact DeviceActivation WorkCluster Planet PlanetData
ghc-prof-options: -prof -auto-all
ghc-shared-options: -prof -auto-all
ghc-options: -Wall -threaded -fno-warn-type-defaults
hugs-options:
nhc98-options:
jhc-options: