name:                roguestar-gl
version:             0.5
cabal-version:       >=1.2
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson <lane@downstairspeople.org>
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description:         Roguestar is a science fiction themed roguelike (turn-based,
                     chessboard-tiled, role playing) game written in Haskell.  Roguestar uses
                     OpenGL for graphics.  This is still a very early release.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/roguestar-gl.git>.
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Flag GLUT
  Description:       Enable GLUT widget toolkit.

Flag GTK
  Description:       Enable GTK widget toolkit.

Executable roguestar
  main-is:             Main.hs
  build-depends:       process, old-time, bytestring
  ghc-options:         -threaded
  if flag(GLUT)
      cpp-options: -D__ROGUESTAR_SUPPORTS_GLUT__
  if flag(GTK)
      cpp-options: -D__ROGUESTAR_SUPPORTS_GTK__
  if !flag(GLUT) && !flag(GTK)
      buildable:       False

Executable roguestar-gl
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Quality, ProtocolTypes, VisibleObject,
                       Strings, WordGenerator, Driver,
                       PrintTextData, Animation,
                       Actions, Limbs, Tables, PrintText, CommandLine,
                       Models.Androsynth, Models.QuestionMark, Models.Terrain, Models.RecreantFactory,
                       Models.Recreant, Models.Ascendant, Models.Materials, Models.Reptilian,
                       Models.Library, Models.MachineParts, Models.LibraryData, Models.Caduceator,
                       Models.Tree, Models.Encephalon, Models.PhaseWeapons, RenderingControl,
                       Keymaps.BuiltinKeymaps, Keymaps.CommonKeymap, Keymaps.NumpadKeymap,
                       Keymaps.Keymaps, Keymaps.VIKeymap, AnimationBuildings, Models.Monolith,
                       Models.Stargate, Statistics, Globals, Models.Sky, Scene, Models.Spheres,
                       Models.EnergySwords, Models.EnergyThings, Models.CyborgType4,
                       AnimationEvents, AnimationMenus, AnimationTerrain, AnimationTools,
                       AnimationExtras, AnimationCreatures, AnimationBuildings, MaybeArrow,
                       EventUtils, Sky, Config, Processes, MainGLUT, MainGTK, DrawString,
                       Initialization
  build-depends:       base>=4&&<5,
                       rsagl==0.5,
                       rsagl-math==0.5,
                       rsagl-frp==0.5,
                       containers>=0.3.0.0 && < 0.4,
                       arrows>=0.4.1.2 && < 0.5,
                       mtl>=1.1.0.2 && < 1.2,
                       MonadRandom>=0.1.4 && < 1.2,
                       OpenGL>=2.4.0.1 && < 2.5,
                       filepath>=1.1.0.3 && < 1.2,
                       random>=1.0.0.2 && < 1.1,
                       bytestring>=0.9.1.5 && < 0.10,
                       stm>=2.1.1.2 && < 2.2,
                       priority-sync>=0.2.1.0 && < 0.2.2
  if flag(GLUT)
      cpp-options: -D__ROGUESTAR_SUPPORTS_GLUT__
      build-depends:   GLUT>=2.2.2.0 && < 2.3
  if flag(GTK)
      cpp-options: -D__ROGUESTAR_SUPPORTS_GTK__
      build-depends:   gtk>=0.11.0 && < 0.12,
                       gtkglext>=0.11.0&& < 0.12
  if !flag(GLUT) && !flag(GTK)
      buildable:       False
  ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
  ghc-prof-options:    -prof -auto-all

