name:                roguestar-gtk
version:             0.5
cabal-version:       >=1.2
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson <lane@downstairspeople.org>
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description:         Roguestar is a science fiction themed roguelike (turn-based,
                     chessboard-tiled, role playing) game written in Haskell.  Roguestar uses
                     OpenGL for graphics.  This is still a very early release.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/roguestar-gl.git>.
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Executable roguestar-gtk
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base>=4&&<5,
                       roguestar-gl==0.5,
                       GLUT>=2.2.2.0 && < 2.3,
                       rsagl==0.5,
                       gtk>=0.11.0 && < 0.12,
                       gtkglext>=0.11.0&& < 0.12,
                       OpenGL>=2.4 && < 2.5,
                       stm>=2.1 && < 2.2

  ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
  ghc-prof-options:    -prof -auto-all

