name:                roguestar-gtk
version:             0.6.0.0
cabal-version:       >=1.2
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson <lane@downstairspeople.org>
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike game.  GTK front-end.
description:         Requires roguestar and roguestar-engine.
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Executable roguestar-gtk
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base>=4&&<5,
                       roguestar-gl==0.6.0.0,
                       GLUT>=2.2.2.0 && < 2.3,
                       rsagl==0.6.0.0,
                       gtk>=0.11.0,
                       gtkglext>=0.11.0,
                       OpenGL>=2.4 && < 2.5,
                       stm>=2.1 && < 2.2

  ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
  ghc-prof-options:    -prof -auto-all

