name:                roguestar
version:             0.5
cabal-version:       >=1.2
license:             OtherLicense
license-file:        LICENSE
author:              Christopher Lane Hinson <lane@downstairspeople.org>
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Game
synopsis:            Sci-fi roguelike (turn-based, chessboard-tiled, role playing) game
description:         Roguestar is a science fiction themed roguelike (turn-based,
                     chessboard-tiled, role playing) game written in Haskell.  Roguestar uses
                     OpenGL for graphics.  This is still a very early release.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/roguestar-gl.git>.
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Executable roguestar
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4 && <5, process, old-time, bytestring, filepath, directory
  ghc-options:         -threaded

