name:                rsagl-demos
version:             0.4.0.3
license:             BSD3
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Graphics
synopsis:            The RogueStar Animation and Graphics Library -- Demonstrations and Tests
description:         These are demos and test cases for RSAGL.
cabal-version:       >= 1.2
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Executable _rsagl_modelview
    main-is:             ModelView.hs
    ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
    build-depends:       base>=4, old-time, random, array, arrows, containers, parallel, mtl, OpenGL, GLUT, rsagl==0.4.0.3

Executable _rsagl_tests
    main-is:             Tests.hs
    ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
    build-depends:       base>=4&&<5, old-time, random, arrows, containers, parallel, QuickCheck, rsagl==0.4.0.3

