name:                rsagl-demos
version:             0.6.0.0
license:             BSD3
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Graphics
synopsis:            The RogueStar Animation and Graphics Library -- Demonstrations and Tests
description:         These are demos and test cases for RSAGL.
cabal-version:       >= 1.2
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Executable _rsagl_modelview
    main-is:             ModelView.hs
    ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
    build-depends:       base>=4,
                         old-time,
                         random,
                         array,
                         arrows,
                         containers,
                         parallel,
                         mtl,
                         OpenGL>=2.4.0.1&&<2.5,
                         GLUT>=2.2.2.0&&<2.3,
                         rsagl-math==0.6.0.0,
                         rsagl-frp==0.6.0.0,
                         rsagl==0.6.0.0

Executable _rsagl_tests
    main-is:             Tests.hs
    ghc-options:         -threaded -fno-warn-type-defaults -fexcess-precision
    build-depends:       base>=4&&<5,
                         old-time,
                         random,
                         arrows,
                         containers,
                         parallel,
                         QuickCheck,
                         rsagl-math==0.6.0.0,
                         rsagl-frp==0.6.0.0,
                         rsagl==0.6.0.0

