name:                rsagl
version:             0.5
license:             BSD3
license-file:        LICENSE
author:              Christopher Lane Hinson
maintainer:          Christopher Lane Hinson <lane@downstairspeople.org>

category:            Graphics, FRP
synopsis:            The RogueStar Animation and Graphics Library
description:         RSAGL, the RogueStar Animation and Graphics Library,
                     was specifically designed for a computer game called
                     roguestar, but effort has been made to make it accessable
                     to other projects that might benefit from it.  It includes
                     mathematical utilities, a 3D modeling language based on
                     parametric surfaces, and an arrow-based FRP framework.
                     .
                     The git repository is available at <http://www.downstairspeople.org/git/rsagl.git>.
cabal-version:       >= 1.2
homepage:            http://roguestar.downstairspeople.org/

build-type:          Simple
tested-with:         GHC==6.12.1

Library
    exposed-modules:     RSAGL.Animation, RSAGL.Modeling, RSAGL.FRP, RSAGL.Scene,
                         RSAGL.RayTrace.RayTrace,
                         RSAGL.Modeling.Material,
                         RSAGL.Animation.KinematicSensors,
                         RSAGL.Color.RSAGLColors, RSAGL.Modeling.Extrusion,
                         RSAGL.FRP.Time,
                         RSAGL.Animation.Joint,
                         RSAGL.Scene.WrappedAffine,
                         RSAGL.Scene.Scene, RSAGL.Animation.InverseKinematics, RSAGL.FRP.FRP,
                         RSAGL.FRP.RK4, RSAGL.Animation.AnimationExtras,
                         RSAGL.Modeling.Model, RSAGL.Modeling.Deformation,
                         RSAGL.Modeling.Noise, RSAGL.Modeling.Tesselation,
                         RSAGL.Modeling.ModelingExtras, RSAGL.Animation.Animation,
                         RSAGL.Modeling.Optimization,
                         RSAGL.Scene.CoordinateSystems,
                         RSAGL.Scene.LightSource, RSAGL.RayTrace.Scattering,
                         RSAGL.Extras.Sky, RSAGL.Extras.ColorPhysics,
                         RSAGL.Modeling.BakedModel, RSAGL.FRP.FactoryArrow, RSAGL.Auxiliary.RecombinantState,
                         RSAGL.FRP.Accumulation, RSAGL.FRP.FRPModel
                         RSAGL.Color.ColorSpace, RSAGL.Color.RGB, RSAGL.Color.HCL,
                         RSAGL.Color.Alpha, RSAGL.Color.OpenGL, RSAGL.Color,
                         RSAGL.Color.Channels, RSAGL.Color.Spaces, RSAGL.Color.LinearAdjust

    other-modules:       RSAGL.Modeling.OpenGLPrimitives,
                         RSAGL.Auxiliary.Auxiliary,
                         RSAGL.Auxiliary.ApplicativeWrapper,
                         RSAGL.Color.Auxiliary

    ghc-options:         -fno-warn-type-defaults -fexcess-precision
    ghc-prof-options:    -prof -auto-all

    build-depends:       base>=4 && <5,
                         rsagl-math==0.5,
                         old-time>= 1.0.0.3 && < 1.1,
                         random>= 1.0.0.2 && < 1.1,
                         array>= 0.3.0.0 && < 0.4,
                         arrows>= 0.4.1.2 && < 0.5,
                         containers>= 0.3.0.0 && < 0.4,
                         parallel>= 2.2.0.1 && < 2.3,
                         mtl>= 1.1.0.2 && < 1.2,
                         OpenGL>= 2.4.0.1 && < 2.5,
                         OpenGLRaw>= 1.1.0.1 && < 1.2,
                         parsec>=3.1.0 && < 3.2,
                         Vec>=0.9.8 && < 0.10,
                         Vec-OpenGLRaw>=0.2.0.0 && < 0.3,
                         stm>= 2.1.1.2 && < 2.2,
                         data-memocombinators>= 0.4.0 && < 0.5

